--- a/DesignPatterns/DesignPatterns.csproj
+++ b/DesignPatterns/DesignPatterns.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="BehavioralDesignPatterns\" />
+    <Folder Include="StructuralDesignPatterns\" />
+  </ItemGroup>
+
 </Project>
